--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
         <H1>T.A Faiz Public School</H1>
         <h3>* are mandatory </h3>
+        <div id="res" style="color: green; font-size: 10px;"></div>
         <form method ="post" id="form">
             <div class></div>
             <label for="srno">Serial Number<span  id="asterisk">*</span> </label>
@@ -26,13 +27,13 @@
             <input type = "tel" id="phone" name="phone" placeholder="Enter Mobile number"><br><br>
 
             <label for="dob">Date of Birth</label>
-            <input type="date" id="dob" name="dob"  placeholder="Enter date of birth"><br><br>
+            <input type="text" id="dob" name="dob"  placeholder="Enter date of birth"><br><br>
 
             <label for="address">Address</label>
             <input type="text" id="address" name="address" placeholder="Enter Address"><br><br>
 
             <button type="submit" id="btn">Submit</button>
-            <div id="res" style="color: green; font-size: 15px;"></div>
+            
         </form>        
     </div>
     <style>
@@ -63,12 +64,12 @@
         }
         h1{
             text-align: center;
-            color: rgb(155, 24, 24);
+            color: #2D4F2B;
         }
         h3{
             text-align: right;
             color: rgb(249, 36, 7);
-            font-size: 15px;
+            font-size: 9px;
         }
         #asterisk{
             color: red;
@@ -90,7 +91,7 @@
         button{
             width: 100%;
             padding: 10px;
-            background-color: rgb(155, 24, 24);
+            background-color: #56DFCF;
             color: white;
             border: none;
             border-radius: 5px;
