--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <label for="srno">Serial Number<span  id="asterisk">*</span> </label>
             <input type="number" id="srno" name="srno" required placeholder="Enter Serial Number"><br><br>
             <label for="roll">Roll Number</label>
-            <input type="number" id="roll" name="roll" required placeholder="Enter Roll Number"><br><br>
+            <input type="number" id="roll" name="roll" placeholder="Enter Roll Number"><br><br>
             <label for="name">Name<span  id="asterisk">*</span> </label>
             <input type="text" id="name" name="name"  placeholder="Enter Student name"><br><br>
             <label for="fname">Father's Name </label>
@@ -77,7 +77,7 @@
         label{
             font-weight: bold;
             margin-bottom: 5px;
-            font-size: 25px;
+            font-size: 20px;
 
         }
         input{
