--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         }
         h1{
             text-align: center;
-            color: #2D4F2B;
+            color: #ff5733;
         }
         h3{
             text-align: right;
